--- a/raon-control/archive.css
+++ b/raon-control/archive.css
@@ -1,3 +1,7 @@
+:root {
+    --background-image-top: 0px;
+}
+
 @font-face {
     font-family: "Helvetica-Neue-Light";
     src: url(fonts/helveticaneue/HelveticaNeueLight.ttf);
@@ -14,16 +18,12 @@
 }
 
 body {
-    /* overflow: hidden; */
-    /* margin: 0px;
-width: 1920px;
-height: 1080px; */
     margin: 0px;
     background-color: black;
     background-image: url('shadowbg.png');
     background-repeat: no-repeat;
     background-position: center var(--background-image-top);
-    font-family: "Helvetica-Neue-Light";
+    font-family: "Roboto-Thin";
 }
 
 
@@ -65,10 +65,9 @@ height: 1080px; */
 
 .search-box {
     /* position: relative; */
-    width: 1000px;
+    width: 800px;
     height: 50px;
-    /* margin: auto; */
-    background-color: darkcyan;
+    margin: auto;
 }
 
 /* .search {
@@ -78,13 +77,19 @@ height: 1080px; */
 } */
 
 #input {
-    /* padding: 10px; */
+    padding: 10px;
     font-size: 28px;
-    /* border: 1px solid #1d1d1d; */
-    width: 1000px;
-    height: 50px;
-    background: #1d1d1d;
-    color: white
+    border: 3px solid #1d1d1d;
+    width: 780px;
+    height: 28px;
+    background: rgba(10, 10, 10, 0.5);
+    color: white;
+    transition: 0.5s;
+    outline: none;
+}
+
+#input:focus {
+    border: 3px solid dodgerblue;
 }
 
 #button {
@@ -117,7 +122,7 @@ th {
 td {
     color: white;
     height: 40px;
-    text-align: left;
+    text-align: center;
 }
 
 tr:nth-child(even) {
@@ -126,4 +131,16 @@ tr:nth-child(even) {
 
 tr:nth-child(odd) {
     background-color: #1d1d1d;
+}
+
+td:nth-child(1) {
+    padding-left: 10px;
+    text-align: left;
+}
+
+
+@media all and (max-width: 1920px) {
+    body {
+        background-position: 0px var(--background-image-top);
+    }
 }
