--- a/raon-control/member.css
+++ b/raon-control/member.css
@@ -86,6 +86,7 @@
     width: 200px;
     height: 200px;
     margin-top: 40px;
+    border-radius: 50%;
   }
 
   .name {
@@ -111,6 +112,9 @@
       margin-bottom: 5px;
       color: white;
       font-size: 16px;
+      display: flex; 
+      justify-content: center; 
+      align-items: center;
   }
 
   .location {
