member profile image

--- a/raon-control/member.css
+++ b/raon-control/member.css
@@ -23,7 +23,7 @@ body {
   background-image: url('shadowbg.png');
   background-repeat: no-repeat;
   background-position: center var(--background-image-top);
-  font-family: "Helvetica-Neue-Light";
+  font-family: "Roboto-Thin";
 }
 
 #time-stamp {
@@ -117,5 +117,11 @@ body {
 }
 
 .location {
-  margin-top: 40px;
+  margin-top: 30px;
+}
+
+@media all and (max-width: 1920px) {
+    body {
+        background-position: 0px var(--background-image-top);
+    }
 }
