--- a/raon-control/member.css
+++ b/raon-control/member.css
@@ -62,6 +62,17 @@ body {
   font-family: "Helvetica-Neue-Light";
 }
 
+#menu {
+  display: flex;
+  position: absolute;
+  width: 700px;
+  height: 80px;
+  left: 800px;
+  margin: auto;
+  color: white;
+  background-color: rosybrown;
+}
+
 .card {
   /* box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2); */
   /* position: relative; */
