--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -17,16 +17,17 @@
     src: url(fonts/Roboto-Light.ttf);
 }
 
+
 body {
-    /* overflow: hidden; */
     margin: 0px;
     background-color: black;
     background-image: url('shadowbg.png');
     background-repeat: no-repeat;
     background-position: center var(--background-image-top);
-}
-
-#time-stamp {
+    font-family: "Roboto-Thin";
+  }
+  
+  #time-stamp {
     position: absolute;
     color: white;
     font-family: "Roboto-Thin";
@@ -34,33 +35,59 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -70%);
-}
-
-.under-line-box {
+  }
+  
+  #under-line {
     position: absolute;
-    top: 34px;
-}
-
-.center-top-box {
+    top: 40px;
+  }
+  
+  #center-top {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-}
-
-.raon-box {
+  }
+  
+  #raon-box {
     position: absolute;
     left: 10px;
     top: 20px;
-}
-
-.accelerator-control {
+  }
+  
+  #accelerator-control {
     position: absolute;
     color: white;
     width: 150px;
     left: 150px;
     top: 40px;
     font-family: "Helvetica-Neue-Light";
-}
+  }
+  
+  #menu {
+    display: flex;
+    position: absolute;
+    width: 700px;
+    height: 80px;
+    left: 1200px;
+    justify-content: space-evenly;
+    color: white;
+    font-size: 18px;
+  }
+  
+  #menu a {
+    margin: auto;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  #menu a:visited {
+    color: white;
+  }
+  
+  #menu a:hover {
+    transform: scale(1.3);
+  }
+  
 
 .body-box {
     width: 1920px;
@@ -324,5 +351,11 @@ body {
     to {
         stroke-dashoffset: var(--chartValue);
 
+    }
+}
+
+@media all and (max-width: 1920px) {
+    body {
+        background-position: 0px var(--background-image-top);
     }
 }
