--- a/raon-control/document.css
+++ b/raon-control/document.css
@@ -24,9 +24,9 @@ body {
     background-repeat: no-repeat;
     background-position: center var(--background-image-top);
     font-family: "Roboto-Thin";
-}
-
-#time-stamp {
+  }
+  
+  #time-stamp {
     position: absolute;
     color: white;
     font-family: "Roboto-Thin";
@@ -34,34 +34,59 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -70%);
-}
-
-.under-line-box {
+  }
+  
+  #under-line {
     position: absolute;
-    top: 34px;
-}
-
-.center-top-box {
+    top: 40px;
+  }
+  
+  #center-top {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-}
-
-.raon-box {
+  }
+  
+  #raon-box {
     position: absolute;
     left: 10px;
     top: 20px;
-}
-
-.accelerator-control {
+  }
+  
+  #accelerator-control {
     position: absolute;
     color: white;
     width: 150px;
     left: 150px;
     top: 40px;
     font-family: "Helvetica-Neue-Light";
-}
-
+  }
+  
+  #menu {
+    display: flex;
+    position: absolute;
+    width: 700px;
+    height: 80px;
+    left: 1200px;
+    justify-content: space-evenly;
+    color: white;
+    font-size: 18px;
+  }
+  
+  #menu a {
+    margin: auto;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+  }
+  
+  #menu a:visited {
+    color: white;
+  }
+  
+  #menu a:hover {
+    transform: scale(1.3);
+  }
+  
 .container {
     position: relative;
     animation: animatebottom 1s;
