--- a/raon-control/member.css
+++ b/raon-control/member.css
@@ -36,24 +36,24 @@ body {
   transform: translate(-50%, -70%);
 }
 
-.under-line-box {
+#under-line {
   position: absolute;
-  top: 34px;
+  top: 40px;
 }
 
-.center-top-box {
+#center-top {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0%);
 }
 
-.raon-box {
+#raon-box {
   position: absolute;
   left: 10px;
   top: 20px;
 }
 
-.accelerator-control {
+#accelerator-control {
   position: absolute;
   color: white;
   width: 150px;
@@ -71,16 +71,20 @@ body {
   justify-content: space-evenly;
   color: white;
   font-size: 18px;
-  /* background-color: rosybrown; */
 }
 
-#menu p {
+#menu a {
   margin: auto;
-  /* width: 200px; */
+  text-decoration: none;
+  transition: all 0.2s ease-in-out;
 }
 
-#menu p:hover {
-  color: red;
+#menu a:visited {
+  color: white;
+}
+
+#menu a:hover {
+  transform: scale(1.3);
 }
 
 .card {
