--- a/raon-control/schedule.css
+++ b/raon-control/schedule.css
@@ -18,15 +18,12 @@
 }
 
 body {
-    overflow: hidden;
-    /* margin: 0px;
-    width: 1920px;
-    height: 1080px; */
+    margin: 0px;
     background-color: black;
     background-image: url('shadowbg.png');
     background-repeat: no-repeat;
     background-position: center var(--background-image-top);
-    font-family: "Roboto-Light";
+    font-family: "Roboto-Thin";
 }
 
 #time-stamp {
@@ -39,30 +36,55 @@ body {
     transform: translate(-50%, -70%);
 }
 
-.under-line-box {
+#under-line {
     position: absolute;
-    top: 34px;
+    top: 40px;
 }
 
-.center-top-box {
+#center-top {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
 }
 
-.raon-box {
+#raon-box {
     position: absolute;
     left: 10px;
     top: 20px;
 }
 
-.accelerator-control {
+#accelerator-control {
     position: absolute;
     color: white;
     width: 150px;
     left: 150px;
     top: 40px;
     font-family: "Helvetica-Neue-Light";
+}
+
+#menu {
+    display: flex;
+    position: absolute;
+    width: 700px;
+    height: 80px;
+    left: 1200px;
+    justify-content: space-evenly;
+    color: white;
+    font-size: 18px;
+}
+
+#menu a {
+    margin: auto;
+    text-decoration: none;
+    transition: all 0.2s ease-in-out;
+}
+
+#menu a:visited {
+    color: white;
+}
+
+#menu a:hover {
+    transform: scale(1.3);
 }
 
 #body-left {
@@ -95,15 +117,13 @@ body {
     color: white;
 }
 
-#last-button,
-#next-button {
+#last-button, #next-button {
     width: 100px;
     height: 70px;
     border: none;
     outline: none;
     color: white;
     background-color: #181818;
-
 }
 
 #year {
@@ -115,7 +135,6 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #181818;
-
 }
 
 .week {
@@ -129,7 +148,6 @@ body {
     background-color: #181818;
     justify-content: center;
     align-items: center;
-
 }
 
 #calendar {
@@ -168,7 +186,6 @@ button {
     color: white;
     position: relative;
     font-family: "Roboto-Light";
-
 }
 
 #todo-box {
@@ -191,7 +208,7 @@ button {
     background-color: var(--barColor);
 }
 
-.under-line {
+.under-bar {
     animation-name: bar-animation;
     animation-duration: 1s;
     animation-fill-mode: forwards;
@@ -304,7 +321,6 @@ button {
     from {
         width: 0px;
     }
-
     to {
         width: 625px;
     }
@@ -315,7 +331,6 @@ button {
         bottom: -50px;
         opacity: 0
     }
-
     to {
         bottom: 0;
         opacity: 1;
@@ -327,9 +342,14 @@ button {
         bottom: 0px;
         opacity: 1
     }
-
     to {
         bottom: -50px;
         opacity: 0
+    }
+}
+
+@media all and (max-width: 1920px) {
+    body {
+        background-position: 0px var(--background-image-top);
     }
 }
