--- a/raon-control/asset.css
+++ b/raon-control/asset.css
@@ -3,11 +3,6 @@
 }
 
 @font-face {
-    font-family: "Helvetica-Neue-Light";
-    src: url(fonts/helveticaneue/HelveticaNeueLight.ttf);
-}
-
-@font-face {
     font-family: "Roboto-Thin";
     src: url(fonts/Roboto-Thin.ttf);
 }
@@ -15,6 +10,11 @@
 @font-face {
     font-family: "Roboto-Light";
     src: url(fonts/Roboto-Light.ttf);
+}
+
+@font-face {
+    font-family: "NotoSansKR-Thin";
+    src: url(fonts/NotoSansKR-Thin.otf);
 }
 
 body {
@@ -165,14 +165,15 @@ body {
     width: 100%;
     height: 100%;
     /* padding: 20px; */
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, 0.8);
+    transition: background-color 0.5s;
     /* background-color: fuchsia; */
 }
 
 .asset-number {
     position: absolute;
-    left: 10px;
-    top: 10px;
+    left: 20px;
+    top: 15px;
     color: white;
     font-size: 40px;
     /* border-radius: 0px 0px 10px 10px; */
@@ -180,7 +181,7 @@ body {
 
 .asset-date {
     position: absolute;
-    left: 10px;
+    left: 20px;
     top: 60px;
     color: #CCCCCC;
     font-size: 24px;
@@ -188,7 +189,7 @@ body {
 
 .asset-manager {
     position: absolute;
-    right: 10px;
+    right: 20px;
     top: 10px;
     color: #FFF;
     font-size: 48px;
@@ -197,18 +198,20 @@ body {
 
 .asset-name {
     position: absolute;
-    left: 10px;
-    bottom: 50px;
+    left: 20px;
+    bottom: 60px;
     color: #CCCCCC;
     font-size: 24px;
+    font-family: "NotoSansKR-Thin";
 }
 
 .asset-location {
     position: absolute;
-    left: 10px;
-    bottom: 10px;
+    left: 20px;
+    bottom: 20px;
     color: #CCCCCC;
     font-size: 24px;
+    font-family: "NotoSansKR-Thin";
 }
 
 @media all and (max-width: 1920px) {
@@ -216,13 +219,3 @@ body {
         background-position: 0px var(--background-image-top);
     }
 }
-
-/* 
-position: relative;
-width: 100%;
-min-height: 100vh;
-display: flex;
-justify-content: center;
-align-items: center;
-background-color: #2196f3;
-overflow: hidden; */
