--- a/raon-control/asset.css
+++ b/raon-control/asset.css
@@ -94,13 +94,7 @@ body {
     margin: auto;
 }
 
-/* .search {
-    background-color: darkgoldenrod;
-    margin: auto;
-    box-sizing: border-box;
-} */
-
-#input {
+#input-search {
     padding: 10px;
     font-size: 28px;
     border: 3px solid #1d1d1d;
@@ -114,32 +108,18 @@ body {
 
 /* Hide spin arrows */
 /* Chrome, Safari, Edge, Opera */
-#input::-webkit-outer-spin-button,
-#input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+#input-search::-webkit-outer-spin-button, #input-search::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
 /* Firefox */
-#input[type=number] {
-  -moz-appearance: textfield;
+#input-search {
+    -moz-appearance: textfield;
 }
 
-
-#input:focus {
+#input-search:focus {
     border: 3px solid dodgerblue;
-}
-
-#button {
-    float: left;
-    width: 10%;
-    padding: 10px;
-    background: #1d1d1d;
-    color: white;
-    font-size: 28px;
-    border: 1px solid #1d1d1d;
-    border-left: none;
-    cursor: pointer;
 }
 
 .swiper-container {
@@ -212,6 +192,127 @@ body {
     color: #CCCCCC;
     font-size: 24px;
     font-family: "NotoSansKR-Thin";
+}
+
+/* New asset modal container */
+#new-asset-button {
+    position: absolute;
+    right:10px;
+    top:-30px;
+    width: 36px;
+    height: 38px;
+    background-color: transparent;
+    color: white;
+    font-size: 32px;
+    /* padding: 10px; */
+    /* margin: 8px 0; */
+    border: none;
+    outline: none;
+    text-align: center;
+    text-decoration: none;
+    /* border-radius: 4px; */
+    /* cursor: pointer; */
+}
+
+.update-asset-button {
+    position: absolute;
+    right:20px;
+    bottom:20px;
+    width: 36px;
+    height: 38px;
+    background-color: transparent;
+    color: white;
+    font-size: 32px;
+    /* padding: 10px; */
+    /* margin: 8px 0; */
+    border: none;
+    outline: none;
+    text-align: center;
+    text-decoration: none;
+    /* border-radius: 4px; */
+    /* cursor: pointer; */
+}
+
+#form-container {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    z-index: 10;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#form-asset {
+    display: flex;
+    width: 1920px;
+    height: 1080px;
+    margin:auto;
+    justify-content: center;
+    align-items: center;
+    /* background-color: rosybrown; */
+}
+
+#form-asset-container {
+    position: relative;
+    margin: auto;
+    width: 300px;
+    height: 450px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
+}
+
+#close {
+    position: absolute;
+    right: 25px;
+    top: 0;
+    color: #000;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+#close:hover, #close:focus {
+    color: red;
+    cursor: pointer;
+}
+
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+.save-button {
+    width: 100%;
+    /* background-color: #4CAF50; */
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+/* .-button {
+    width: 100%;
+    background-color: #008CBA;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+} */
+
+
+#save-button:hover {
+    background-color: #45a049;
 }
 
 @media all and (max-width: 1920px) {
