--- a/raon-control/asset.css
+++ b/raon-control/asset.css
@@ -218,15 +218,15 @@ body {
     position: absolute;
     right:20px;
     bottom:20px;
-    width: 36px;
-    height: 38px;
-    background-color: transparent;
+    /* width: 36px;
+    height: 38px; */
+    /* background-color: transparent; */
     color: white;
     font-size: 32px;
     /* padding: 10px; */
     /* margin: 8px 0; */
-    border: none;
-    outline: none;
+    /* border: none;
+    outline: none; */
     text-align: center;
     text-decoration: none;
     /* border-radius: 4px; */
