--- a/raon-control/asset.css
+++ b/raon-control/asset.css
@@ -107,13 +107,16 @@ body {
 }
 
 /* Hide spin arrows */
+
 /* Chrome, Safari, Edge, Opera */
+
 #input-search::-webkit-outer-spin-button, #input-search::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
 /* Firefox */
+
 #input-search {
     -moz-appearance: textfield;
 }
@@ -195,10 +198,11 @@ body {
 }
 
 /* New asset modal container */
+
 #new-asset-button {
     position: absolute;
-    right:10px;
-    top:-30px;
+    right: 10px;
+    top: -30px;
     width: 36px;
     height: 38px;
     background-color: transparent;
@@ -216,10 +220,10 @@ body {
 
 .update-asset-button {
     position: absolute;
-    right:10px;
-    bottom:10px;
-    width: 36px;
-    height: 38px;
+    right: 10px;
+    bottom: 10px;
+    width: 38px;
+    height: 36px;
     background-color: transparent;
     color: white;
     font-size: 32px;
@@ -229,8 +233,13 @@ body {
     outline: none;
     text-align: center;
     text-decoration: none;
-    /* border-radius: 4px; */
-    /* cursor: pointer; */
+    opacity: 0.5;
+    transition: opacity 0.3s;
+    cursor: default;
+}
+
+.update-asset-button:hover {
+    opacity: 0.8;
 }
 
 #form-container {
@@ -248,7 +257,7 @@ body {
     display: flex;
     width: 1920px;
     height: 1080px;
-    margin:auto;
+    margin: auto;
     justify-content: center;
     align-items: center;
     /* background-color: rosybrown; */
@@ -309,7 +318,6 @@ input[type=text], select {
     border-radius: 4px;
     cursor: pointer;
 } */
-
 
 #save-button:hover {
     background-color: #45a049;
