--- a/raon-control/archive.css
+++ b/raon-control/archive.css
@@ -62,6 +62,14 @@ body {
     font-family: "Helvetica-Neue-Light";
 }
 
+#accelerator-control a {
+    text-decoration: none;
+}
+
+#accelerator-control a:link, a:visited {
+    color: white;
+}
+
 #menu {
     display: flex;
     position: absolute;
@@ -93,12 +101,6 @@ body {
     height: 50px;
     margin: auto;
 }
-
-/* .search {
-    background-color: darkgoldenrod;
-    margin: auto;
-    box-sizing: border-box;
-} */
 
 #input {
     padding: 10px;
