--- a/raon-control/document.css
+++ b/raon-control/document.css
@@ -24,9 +24,9 @@ body {
     background-repeat: no-repeat;
     background-position: center var(--background-image-top);
     font-family: "Roboto-Thin";
-  }
-  
-  #time-stamp {
+}
+
+#time-stamp {
     position: absolute;
     color: white;
     font-family: "Roboto-Thin";
@@ -34,35 +34,43 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -70%);
-  }
-  
-  #under-line {
+}
+
+#under-line {
     position: absolute;
     top: 40px;
-  }
-  
-  #center-top {
+}
+
+#center-top {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-  }
-  
-  #raon-box {
+}
+
+#raon-box {
     position: absolute;
     left: 10px;
     top: 20px;
-  }
-  
-  #accelerator-control {
+}
+
+#accelerator-control {
     position: absolute;
     color: white;
     width: 150px;
     left: 150px;
     top: 40px;
     font-family: "Helvetica-Neue-Light";
-  }
-  
-  #menu {
+}
+
+#accelerator-control a {
+    text-decoration: none;
+}
+
+#accelerator-control a:link, a:visited {
+    color: white;
+}
+
+#menu {
     display: flex;
     position: absolute;
     width: 700px;
@@ -71,22 +79,22 @@ body {
     justify-content: space-evenly;
     color: white;
     font-size: 18px;
-  }
-  
-  #menu a {
+}
+
+#menu a {
     margin: auto;
     text-decoration: none;
     transition: all 0.2s ease-in-out;
-  }
-  
-  #menu a:visited {
+}
+
+#menu a:visited {
     color: white;
-  }
-  
-  #menu a:hover {
+}
+
+#menu a:hover {
     transform: scale(1.3);
-  }
-  
+}
+
 .container {
     position: relative;
     animation: animatebottom 1s;
@@ -140,11 +148,16 @@ body {
 }
 
 .no-selection {
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Old versions of Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
     user-select: none;
 }
 
@@ -169,7 +182,6 @@ body {
         bottom: -100px;
         opacity: 0
     }
-
     to {
         bottom: 0;
         opacity: 1
