--- a/raon-control/download.css
+++ b/raon-control/download.css
@@ -62,6 +62,14 @@ body {
     font-family: "Helvetica-Neue-Light";
 }
 
+#accelerator-control a {
+    text-decoration: none;
+}
+
+#accelerator-control a:link, a:visited {
+    color: white;
+}
+
 #menu {
     display: flex;
     position: absolute;
