--- a/raon-control/main.css
+++ b/raon-control/main.css
@@ -1,7 +1,7 @@
 :root {
     --background-image-top: 0px;
-  }
-  
+}
+
 @font-face {
     font-family: "Helvetica-Neue-Light";
     src: url(fonts/helveticaneue/HelveticaNeueLight.ttf);
@@ -17,13 +17,13 @@
     src: url(fonts/Roboto-Light.ttf);
 }
 
-body {
+/* body {
     margin: 0px;
     background-color: black;
     background-image: url('shadowbg.png');
     background-repeat: no-repeat;
     background-position: center var(--background-image-top);
-}
+} */
 
 body {
     margin: 0px;
@@ -32,9 +32,9 @@ body {
     background-repeat: no-repeat;
     background-position: center var(--background-image-top);
     font-family: "Roboto-Thin";
-  }
-  
-  #time-stamp {
+}
+
+#time-stamp {
     position: absolute;
     color: white;
     font-family: "Roboto-Thin";
@@ -42,35 +42,43 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -70%);
-  }
-  
-  #under-line {
+}
+
+#under-line {
     position: absolute;
     top: 40px;
-  }
-  
-  #center-top {
+}
+
+#center-top {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-  }
-  
-  #raon-box {
+}
+
+#raon-box {
     position: absolute;
     left: 10px;
     top: 20px;
-  }
-  
-  #accelerator-control {
+}
+
+#accelerator-control {
     position: absolute;
     color: white;
     width: 150px;
     left: 150px;
     top: 40px;
     font-family: "Helvetica-Neue-Light";
-  }
-  
-  #menu {
+}
+
+#accelerator-control a {
+    text-decoration: none;
+}
+
+#accelerator-control a:link, a:visited {
+    color: white;
+}
+
+#menu {
     display: flex;
     position: absolute;
     width: 700px;
@@ -79,21 +87,21 @@ body {
     justify-content: space-evenly;
     color: white;
     font-size: 18px;
-  }
-  
-  #menu a {
+}
+
+#menu a {
     margin: auto;
     text-decoration: none;
     transition: all 0.2s ease-in-out;
-  }
-  
-  #menu a:visited {
+}
+
+#menu a:visited {
     color: white;
-  }
-  
-  #menu a:hover {
+}
+
+#menu a:hover {
     transform: scale(1.3);
-  }
+}
 
 .title {
     color: white;
@@ -130,7 +138,6 @@ body {
     left: 10px;
 }
 
-
 /* .pvname {
     color: dimgray;
     font-size: 15px;
@@ -138,12 +145,12 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 } */
 
-#polygon-contain{ 
-    width:1920px; 
-    height:780px; 
-    position: absolute; 
-    left:50%; 
-    margin-left:-960px;
+#polygon-contain {
+    width: 1920px;
+    height: 780px;
+    position: absolute;
+    left: 50%;
+    margin-left: -960px;
 }
 
 .leftPolygon {
@@ -266,7 +273,6 @@ body {
     background: var(--b);
     border-radius: 40%;
     z-index: -1;
-
 }
 
 /* .box::before {
@@ -283,11 +289,11 @@ body {
 } */
 
 .level-bar {
-    position: relative; 
-    left: 30px; 
-    top:15px; 
-    width:14px; 
-    height:118px;
+    position: relative;
+    left: 30px;
+    top: 15px;
+    width: 14px;
+    height: 118px;
     background-color: rgba(0, 64, 96, 0.5);
     border: 1px solid rgba(0, 84, 188, 0.5);
     border-radius: 8px;
@@ -307,11 +313,11 @@ body {
 }
 
 .temperature-level-bar {
-    position: relative; 
-    left: 30px; 
-    top:15px; 
-    width:18px; 
-    height:120px;
+    position: relative;
+    left: 30px;
+    top: 15px;
+    width: 18px;
+    height: 120px;
     background-color: rgba(0, 64, 96, 0.5);
     border: 1px solid rgba(0, 84, 188, 0.5);
     overflow: hidden;
@@ -321,14 +327,14 @@ body {
     position: relative;
     left: 1px;
     top: var(--i);
-    width:16px; 
-    height:6px;
-    opacity:0.0;
+    width: 16px;
+    height: 6px;
+    opacity: 0.0;
     transition: opacity 0.5s;
     transition-delay: var(--tDelay);
 }
 
-#temperature1::after, #temperature2::after{
+#temperature1::after, #temperature2::after {
     content: " k";
 }
 
@@ -338,6 +344,7 @@ body {
     animation-timing-function: linear;
     animation-fill-mode: forwards;
 }
+
 .lightning-contain {
     position: absolute;
     width: 60px;
@@ -370,7 +377,7 @@ body {
 }
 
 #moduleName {
-    width:600px;
+    width: 600px;
     position: absolute;
     top: 750px;
     color: white;
@@ -461,7 +468,7 @@ body {
     border-width: 5px;
     border-style: solid;
     border-color: white transparent transparent transparent;
-  }
+}
 
 .moduleNavi-contain:hover .tooltiptext {
     visibility: visible;
@@ -475,19 +482,18 @@ body {
 }
 
 .ioc-text {
-    font-size:10px;
-    fill:white;
-    font-family:Roboto;
+    font-size: 10px;
+    fill: white;
+    font-family: Roboto;
     font-weight: 300;
 }
 
 @keyframes percentage {
     from {
-      stroke-dashoffset: 440;
+        stroke-dashoffset: 440;
     }
     to {
-      stroke-dashoffset: var(--chartValue);
-  
+        stroke-dashoffset: var(--chartValue);
     }
 }
 
@@ -496,7 +502,6 @@ body {
         opacity: 0;
         transform: scale(var(--scale));
     }
-
     to {
         opacity: var(--opacity);
         transform: scale(1.0);
@@ -505,12 +510,9 @@ body {
 
 @keyframes scaleUp {
     from {
-
         transform: scale(0);
     }
-
     to {
-
         transform: scale(1.0);
     }
 }
@@ -537,7 +539,6 @@ body {
     from {
         opacity: 0.0;
     }
-
     to {
         opacity: 1.0;
     }
@@ -545,8 +546,8 @@ body {
 
 #sineWave {
     stroke: #80bfff;
-    stroke-width: 2px; 
-    stroke-linecap: round; 
+    stroke-width: 2px;
+    stroke-linecap: round;
     fill: none;
     stroke-dasharray: 310;
     stroke-dashoffset: 310;
@@ -558,11 +559,10 @@ body {
 
 @keyframes sineWaveDashOffset {
     0% {
-      stroke-dashoffset: 310;
+        stroke-dashoffset: 310;
     }
-    
     100% {
-      stroke-dashoffset: 0;
+        stroke-dashoffset: 0;
     }
 }
 
@@ -570,8 +570,7 @@ body {
     body {
         background-position: 0px var(--background-image-top);
     }
-
-    #polygon-contain{
+    #polygon-contain {
         margin-left: 0px;
         left: 0px;
     }
@@ -591,7 +590,6 @@ body {
     from {
         height: 30px;
     }
-
     to {
         height: calc(1px * var(--splitHeight));
     }
