--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -17,7 +17,6 @@
     src: url(fonts/Roboto-Light.ttf);
 }
 
-
 body {
     margin: 0px;
     background-color: black;
@@ -25,9 +24,9 @@ body {
     background-repeat: no-repeat;
     background-position: center var(--background-image-top);
     font-family: "Roboto-Thin";
-  }
-  
-  #time-stamp {
+}
+
+#time-stamp {
     position: absolute;
     color: white;
     font-family: "Roboto-Thin";
@@ -35,35 +34,52 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -70%);
-  }
-  
-  #under-line {
+}
+
+#under-line {
     position: absolute;
     top: 40px;
-  }
-  
-  #center-top {
+}
+
+#center-top {
     position: absolute;
     left: 50%;
     transform: translate(-50%, 0%);
-  }
-  
-  #raon-box {
+}
+
+#raon-box {
     position: absolute;
     left: 10px;
     top: 20px;
-  }
-  
-  #accelerator-control {
+}
+
+#accelerator-control {
     position: absolute;
     color: white;
     width: 150px;
     left: 150px;
     top: 40px;
     font-family: "Helvetica-Neue-Light";
-  }
-  
-  #menu {
+}
+
+#accelerator-control {
+    position: absolute;
+    color: white;
+    width: 150px;
+    left: 150px;
+    top: 40px;
+    font-family: "Helvetica-Neue-Light";
+}
+
+#accelerator-control a {
+    text-decoration: none;
+}
+
+#accelerator-control a:link, a:visited {
+    color: white;
+}
+
+#menu {
     display: flex;
     position: absolute;
     width: 700px;
@@ -72,22 +88,21 @@ body {
     justify-content: space-evenly;
     color: white;
     font-size: 18px;
-  }
-  
-  #menu a {
+}
+
+#menu a {
     margin: auto;
     text-decoration: none;
     transition: all 0.2s ease-in-out;
-  }
-  
-  #menu a:visited {
+}
+
+#menu a:visited {
     color: white;
-  }
-  
-  #menu a:hover {
+}
+
+#menu a:hover {
     transform: scale(1.3);
-  }
-  
+}
 
 .body-box {
     width: 1920px;
@@ -125,7 +140,6 @@ body {
     text-align: center;
     color: white;
     font-family: "Roboto-Thin";
-
 }
 
 .grid-container {
@@ -147,27 +161,27 @@ body {
 
 .grid-1x1 {
     width: 280px;
-    height: 280px; 
+    height: 280px;
 }
 
 .grid-2x1 {
     width: 580px;
-    height: 280px; 
+    height: 280px;
 }
 
 .grid-2x2 {
     width: 580px;
-    height: 580px; 
+    height: 580px;
 }
 
 .grid-3x2 {
     width: 880px;
-    height: 580px; 
+    height: 580px;
 }
 
 .grid-3x3 {
     width: 880px;
-    height: 880px; 
+    height: 880px;
 }
 
 .w3-animate-left {
@@ -180,7 +194,6 @@ body {
         left: -300px;
         opacity: 0
     }
-
     to {
         left: 0;
         opacity: 1
@@ -197,7 +210,6 @@ body {
         right: -300px;
         opacity: 0
     }
-
     to {
         right: 0;
         opacity: 1
@@ -305,7 +317,6 @@ body {
     background: var(--b);
     border-radius: 40%;
     z-index: -1;
-
 }
 
 .tooltiptext {
@@ -336,9 +347,9 @@ body {
     border-width: 5px;
     border-style: solid;
     border-color: white transparent transparent transparent;
-  }
+}
 
-  .title:hover .tooltiptext {
+.title:hover .tooltiptext {
     visibility: visible;
     opacity: 1.0;
 }
@@ -347,10 +358,8 @@ body {
     from {
         stroke-dashoffset: 503;
     }
-
     to {
         stroke-dashoffset: var(--chartValue);
-
     }
 }
 
