--- a/raon-control/bab.css
+++ b/raon-control/bab.css
@@ -1,3 +1,11 @@
+#body-container {
+    width: 1920px;
+    height: 900px;
+    display: flex;
+    margin: auto;
+    justify-content: center;
+}
+
 #polygon-contain {
     width: 1920px;
     height: 780px;
@@ -20,7 +28,7 @@
     animation-name: fadeIn;
     animation-duration: 0.3s;
     animation-timing-function: linear;
-    animation-delay: calc(0s + 1s * var(--delay));
+    animation-delay: calc(0.6s + 1s * var(--delay));
     animation-fill-mode: forwards;
 }
 
@@ -32,9 +40,17 @@
 
 .out-container {
     position: absolute;
-    width: 1000px;
+    width: 800px;
     height: 800px;
-    left: 460px;
+    left: -100px;
+}
+
+#over {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+    left: 350px;
+    top: 350px;
 }
 
 /* #circle1 {
@@ -53,42 +69,67 @@
     /* animation-direction: alternate; */
 }
 
-#circle4 {
-    animation-name: rotationAni;
-    animation-duration: 60s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-    animation-direction: reverse;
+#circle4-1 {
+    animation: rotationAni 60s linear infinite reverse;
 }
 
-#circle5 {
+#circle4-2 {
     animation: rotationAni 60s linear infinite;
 }
 
+#circle4-3 {
+    animation: rotationAni 80s linear infinite;
+}
+
+#circle5 {
+    animation: rotationAni 60s linear infinite reverse;
+}
+
 #circle8-1 {
-    animation: scaleUp 0.5s, rotationAni 60s linear infinite reverse;
-    /* animation-duration: 30s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear; */
-    /* animation-direction: reverse; */
-    /* example 5s linear 2s infinite alternate */
+    animation: rotationAni 60s linear infinite reverse;
 }
 
 #circle8-2 {
-    animation: scaleUp 1s, rotationAni 60s linear infinite;
+    animation: rotationAni 60s linear infinite;
 }
 
 #circle8-3 {
-    animation: scaleUp 1s, rotationAni 80s linear infinite;
+    animation: rotationAni 80s linear infinite;
 }
 
-.cls-1 {
+.menu-text {
     font-size: 18px;
     fill: #f1f2f2;
 }
 
+#selection {
+    opacity: 0;
+    animation: topDownShowup 0.5s linear 1s forwards;
+}
+
+#menu {
+    opacity: 0;
+}
+
 #wheel, #menu {
     --degree: 360deg;
+}
+
+.wheelSVG {
+    animation: showUp 0.5s linear var(--delay) forwards;
+    opacity: 0;
+}
+
+.wheel-odd {
+    fill: #07536e;
+    stroke: #231f20;
+    stroke-miterlimit: 10;
+}
+
+.wheel-even {
+    fill: #0F495A;
+    stroke: #231f20;
+    stroke-miterlimit: 10;
 }
 
 .roulette {
@@ -132,5 +173,27 @@
     to {
         opacity: var(--opacity);
         transform: scale(1.0);
+    }
+}
+
+@keyframes showUp {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1.0;
+    }
+}
+
+@keyframes topDownShowup {
+    from {
+        top: -10px;
+        opacity: 0;
+    }
+
+    to {
+        top: 0px;
+        opacity: 1;
     }
 }
