--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -95,17 +95,39 @@
     color: white;
     font-size: 30px;
     text-align: center;
-    font-family: Roboto-Thin;
+    /* font-family: Roboto-Thin; */
     line-height: 0.6;
     /* background-color: tomato; */
 }
 
 .data {
+    position: relative;
+    top: 20px;
     color: white;
-    font-size: 60px;
+    font-size: 48px;
     text-align: center;
-    font-family: Roboto-Thin;
+    /* font-family: Roboto-Thin; */
+    /* background-color: darkcyan; */
 }
+
+.sub-data {
+    position: relative;
+    top: 25px;
+    color: white;
+    font-size: 32px;
+    text-align: center;
+    /* font-family: Roboto-Thin; */
+    /* background-color: darkgoldenrod; */
+}
+
+.sub-title {
+    position: relative;
+    bottom: -50px;
+    color: #999999;
+    font-size: 25px;
+    text-align: center;
+}
+
 
 .exp-value {
     font-size: 28px;
