monitoring server part

--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -242,6 +242,19 @@
     transform: scale(0);
 }
 
+.cput-status {
+    width: 20px;
+    height: 120px;
+    background-color: brown;
+}
+
+.level-bar {
+    margin-top: 5px;
+    width: 20px;
+    height: 10px;
+    background-color: brown;
+}
+
 .tooltiptext {
     visibility: hidden;
     width: 280px;
