--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -85,7 +85,6 @@
     content: " %";
 }
 
-
 .w3-animate-right {
     position: relative;
     animation: animateright 0.4s
@@ -121,13 +120,13 @@
 }
 
 .sub-title {
-    position: relative;
-    bottom: -50px;
+    position: absolute;
+    width: 100%;
+    bottom: 10px;
     color: #999999;
     font-size: 25px;
     text-align: center;
 }
-
 
 .exp-value {
     font-size: 28px;
@@ -236,23 +235,39 @@
 .fps-node {
     /* background-color: #00A651; */
     background-color: #004060;
-    width:100%;
-    height:100%;
+    width: 100%;
+    height: 100%;
     animation: scaleUp 0.5s linear var(--delay) forwards;
     transform: scale(0);
 }
 
-.cput-status {
-    width: 20px;
-    height: 120px;
-    background-color: brown;
+.cpu-status, .memory-status, .disk-status, .network-status {
+    margin: auto;
+    width: 40px;
+    height: 152px;
 }
 
 .level-bar {
-    margin-top: 5px;
+    margin-top: 2px;
+    margin-left: auto;
+    margin-right: auto;
     width: 20px;
     height: 10px;
-    background-color: brown;
+    background-color: #004060;
+}
+
+.server-value {
+    margin-bottom: 5px;
+    color: white;
+    font-size: 12px;
+    text-align: center;
+}
+
+.server-title {
+    margin-top: 5px;
+    color: white;
+    font-size: 10px;
+    text-align: center;
 }
 
 .tooltiptext {
