--- a/raon-control/download.css
+++ b/raon-control/download.css
@@ -1,11 +1,6 @@
 #body-box {
     width: 1920px;
     height: 750px;
-    /* background-color: black; */
-    /* background-image: url('images/background-img.png'); */
-    /* background-repeat: no-repeat; */
-    /* background-attachment: fixed; */
-    /* background-position: center; */
     margin: auto;
 }
 
@@ -13,8 +8,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background-color: black; */
-    /* font-family: Roboto-Light; */
 }
 
 .download-box {
@@ -27,8 +20,7 @@
     margin: 50px;
     color: white;
     transition-duration: 0.4s;
-    animation: animateopacity 1s;
-    animation-fill-mode: forwards;
+    animation: animateopacity 1s forwards;
 }
 
 .download-box:hover {
@@ -41,7 +33,6 @@
     height: 100px;
     margin: auto;
     margin-top: 20px;
-    /* background-color: green; */
 }
 
 .download-title {
@@ -81,7 +72,6 @@
 .os-img {
     width: 60px;
     height: 60px;
-    /* background-color: blue; */
 }
 
 .os-text {
@@ -94,6 +84,7 @@
     width: 100%;
     height: 10px;
 }
+
 @keyframes animateopacity {
     from {
         opacity: 0;
