--- a/raon-control/member.css
+++ b/raon-control/member.css
@@ -1,11 +1,14 @@
 .card {
   /* box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2); */
-  /* position: relative; */
+  position: relative;
+  opacity: 0;
+  bottom: -50px;
   width: 300px;
   height: 500px;
   margin: auto;
   text-align: center;
   background-color: rgba(26, 26, 26, 0.3);
+  animation:  animateopacity 1s forwards;;
 }
 
 .topleft {
@@ -54,6 +57,17 @@
 
 .location {
   margin-top: 30px;
+}
+
+@keyframes animateopacity {
+  from {
+      opacity: 0;
+      bottom: -50px;
+  }
+  to {
+      opacity: 1.0;
+      bottom: 0px;
+  }
 }
 
 @media all and (max-width: 1920px) {
