--- a/raon-control/monitoring.css
+++ b/raon-control/monitoring.css
@@ -184,6 +184,7 @@
     color: white;
     font-size: 30px;
     text-align: center;
+    
 }
 
 .doughnutChartTextUnder {
@@ -234,7 +235,7 @@
 
 .fps-node {
     /* background-color: #00A651; */
-    background-color: #004060;
+    background-color: rgb(0, 64, 96);
     width: 100%;
     height: 100%;
     animation: scaleUp 0.5s linear var(--delay) forwards;
