--- a/raon-control/common.css
+++ b/raon-control/common.css
@@ -39,12 +39,19 @@ body {
     font-size: 48px;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -60%);
 }
 
 #under-line {
     position: absolute;
     top: 40px;
+}
+
+.under-line-style {
+    fill: none;
+    stroke: #f3f3f3;
+    stroke-miterlimit: 10;
+    stroke-width: 2px;
 }
 
 #center-top {
